Bug 319777 - "Now Playing" updates cause status change messages to appear in text-ui
Summary: "Now Playing" updates cause status change messages to appear in text-ui
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: text-ui (other bugs)
Version First Reported In: git-latest
Platform: Other Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-13 12:29 UTC by Daniel Vrátil
Modified: 2013-05-16 12:28 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.7.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel Vrátil 2013-05-13 12:29:35 UTC
Everytime a song changes in _______ (fill in your favorite player) 'Now Playing' will change your status to Available - "Now listening to...." and in all open chats a new "You are now marked as available" status message appears. This is quite annoying when you are talking to someone, since it gives you no useful information at all and makes the conversation harder to read.

I have two different ideas, I'd like to hear from you which one you think is better:

1) Don't show status change message when the presence type has not changed. That is if you go from Available to Available (because status message has changed), nothing will be displayed.

2) Include your presence status text in the message. Instead of "You are now marked as available" it would say "You are now marked as available - Listening to Foo by Bar from album FooBar Fighters" or "You are now marked as busy - Please leave me alone". This does not solve the fact that your conversation is spammed by status change messages, but at least you know what's happening (and as a bonus you don't have to open the player to see the name of the song :-D )

Reproducible: Always

Steps to Reproduce:
1. Enable 'Now Playing'
2. Start chat with someone in text-ui
3. Switch songs few times in a player
Actual Results:  
You see lots of "You are now marked as available" status messages

Expected Results:  
You either see nothing, or you see "You are now marked as available - Listening to...." messages
Comment 1 David Edmundson 2013-05-16 11:59:50 UTC
[12:59] <dvratil> no, but I think I like the no-notifcations-at-all approach slighly more than the other one

It has been decided!
Comment 2 Daniel Vrátil 2013-05-16 12:28:37 UTC
Git commit ec564500544b297b4ac05ef57755d336b009d7bc by Dan Vrátil.
Committed on 16/05/2013 at 14:25.
Pushed by dvratil into branch 'master'.

Show status message in user's status change notifications
FIXED-IN: 0.7.0
Reviewed-By: David Edmundson

M  +8    -1    lib/chat-widget.cpp

http://commits.kde.org/telepathy-text-ui/ec564500544b297b4ac05ef57755d336b009d7bc