Show status message in user's status change notifications

BUG: 319777
FIXED-IN: 0.7.0
Reviewed-By: David Edmundson